InteractiveTable: Tweak docs

--- a/packages/grafana-ui/src/components/InteractiveTable/InteractiveTable.mdx
+++ b/packages/grafana-ui/src/components/InteractiveTable/InteractiveTable.mdx
@@ -13,7 +13,7 @@ The InteractiveTable is used to display and select data efficiently.
 It allows for the display and modification of detailed information.
 With additional functionality it allows for batch editing, as needed by your feature's users.
 
-It is a wrapper around [React Table](https://react-table-v7.tanstack.com/), for more information about it, refer to the [official documentation](https://react-table.tanstack.com/docs/overview).
+It is a wrapper around [React Table](https://react-table-v7.tanstack.com/), for more information, refer to the [official documentation](https://react-table.tanstack.com/docs/overview).
 
 ### When to use
 
