horizantal and vertical to row and column

--- a/packages/grafana-ui/src/components/Layout/Stack/Stack.mdx
+++ b/packages/grafana-ui/src/components/Layout/Stack/Stack.mdx
@@ -8,7 +8,7 @@ import * as Stories from './Stack.internal.story';
 
 The `Stack` component is designed to assist with layout and positioning of elements within a container, offering a simple and flexible way to stack elements vertically or horizontally. This documentation outlines the proper usage of the Stack component and provides guidance on when to use it over the Grid or Flex components.
 
-There is also a `HorizontalStack` component, which is a thin wrapper around Stack, equivalent to `<Stack direction="horizontal">`.
+There is also a `HorizontalStack` component, which is a thin wrapper around Stack, equivalent to `<Stack direction="row">`.
 
 ### Usage
 
