Fix failing import

--- a/packages/grafana-ui/src/components/Layout/Stack/Stack.mdx
+++ b/packages/grafana-ui/src/components/Layout/Stack/Stack.mdx
@@ -1,5 +1,5 @@
 import { Meta, ArgTypes, Canvas } from '@storybook/blocks';
-import { Stack, HorizontalStack } from './Stack';
+import { Stack, HorizontalStack } from './index';
 import * as Stories from './Stack.internal.story';
 
 <Meta title="MDX|Stack" component={Stack} />
