--- a/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
+++ b/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
@@ -11,10 +11,22 @@ The `Grid` component allows for the organized layout and alignment of content in
 
 ### When to use
 
+Use the Grid component when you want to create structured and organized layouts where content or elements need to be aligned in rows and columns for clarity and consistency.
+
 ### When not to use
+
+Use the `Stack` component instead for these use cases:
+
+- **Simple layouts:** When you need to arrange elements in a linear format, either vertically or horizontally.
+- **Regular flow:** When you want a "regular" site flow but with standardized spacing between the elements.
+
+Use the `Flex` component instead for these use cases:
+
+- **Alignment:** More options for item alignment.
+- **Flex items:** Custom flex basis or configure how items stretch and wrap.
 
 ## Properties
 
-### Props of Grid
+_Note: There is no support for using `columns` and `minColumnWidth` props at the same time. The correct behaviour is working just with one of them not both._
 
 <ArgTypes of={Grid} />
