--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -216,7 +216,7 @@
     }
   },
   "data-source-picker": {
-    "open-advanced-button": "Øpęŉ äđväŉčęđ đäŧä şőūřčę pįčĸęř"
+    "open-advanced-button": ""
   },
   "data-sources": {
     "datasource-add-button": {
