--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -216,7 +216,15 @@
     }
   },
   "data-source-picker": {
-    "open-advanced-button": "Open advanced data source picker"
+    "open-advanced-button": "Open advanced data source picker",
+    "modal-title": "Select data source",
+    "input-placeholder": "Select data source",
+    "configure-new-data-source": "Open a new tab and configure a data source",
+    "built-in-list": {
+      "description-grafana": "Discover visualizations using mock data",
+      "description-mixed": "Use multiple data sources",
+      "description-dashboard": "Reuse query results from other visualizations"
+    }
   },
   "data-sources": {
     "datasource-add-button": {
