--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -221,6 +221,17 @@
     }
   },
   "data-source-picker": {
+    "built-in-list": {
+      "description-dashboard": "",
+      "description-grafana": "",
+      "description-mixed": ""
+    },
+    "configure-new-data-source": "",
+    "input-placeholder": "",
+    "list": {
+      "no-data-source-message": ""
+    },
+    "modal-title": "",
     "open-advanced-button": ""
   },
   "data-sources": {
