--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -216,6 +216,7 @@
     }
   },
   "data-source-picker": {
+    "add-new-data-source": "",
     "built-in-list": {
       "description-dashboard": "",
       "description-grafana": "",
