--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -221,6 +221,7 @@
     }
   },
   "data-source-picker": {
+    "add-new-data-source": "",
     "built-in-list": {
       "description-dashboard": "",
       "description-grafana": "",
