--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -127,15 +127,32 @@
     }
   },
   "correlations": {
-    "basic-info": {
-      "Description-description": "",
+    "basic-info-form": {
+      "description-description": "",
       "Description-label": "",
-      "Label-description": "",
-      "Label-label": "",
-      "Label-placeholder": "",
-      "Label-required": "",
+      "label-description": "",
+      "label-label": "",
+      "label-placeholder": "",
+      "label-required": "",
       "sub-text": "",
       "title": ""
+    },
+    "nav-form": {
+      "add-btn": "",
+      "back-btn": "",
+      "next-btn": "",
+      "save-btn": ""
+    },
+    "query-editor": {
+      "control-rules": "",
+      "ds-text": "",
+      "ds-title": "",
+      "error-text": "",
+      "error-title": "",
+      "loading": "",
+      "qe-title": "",
+      "query-description": "",
+      "query-label": ""
     },
     "source-form": {
       "control-required": "",
@@ -147,7 +164,36 @@
       "source-description": "",
       "source-label": "",
       "sub-text": "",
-      "titel": ""
+      "title": ""
+    },
+    "target-form": {
+      "control-rules": "",
+      "sub-text": "",
+      "target-description": "",
+      "target-label": "",
+      "title": ""
+    },
+    "transform": {
+      "add-btn": "",
+      "expression-label": "",
+      "expression-required": "",
+      "expression-tooltip": "",
+      "field-input": "",
+      "field-label": "",
+      "field-tooltip": "",
+      "heading": "",
+      "logfmt-description": "",
+      "logfmt-label": "",
+      "map-label": "",
+      "map-tooltip": "",
+      "no-tranform": "",
+      "regex-description": "",
+      "regex-label": "",
+      "remove": "",
+      "remove-tooltip": "",
+      "type-label": "",
+      "type-rules": "",
+      "type-tooltip": ""
     }
   },
   "dashboard": {
