--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -127,15 +127,32 @@
     }
   },
   "correlations": {
-    "basic-info": {
-      "Description-description": "Optional description with more information about the link",
+    "basic-info-form": {
+      "description-description": "Optional description with more information about the link",
       "Description-label": "Description",
-      "Label-description": "This name will be used as the label for the correlation. This will show as button text, a menu item, or hover text on a link.",
-      "Label-label": "Label",
-      "Label-placeholder": "e.g. Tempo traces",
-      "Label-required": "This field is required.",
+      "label-description": "This name will be used as the label for the correlation. This will show as button text, a menu item, or hover text on a link.",
+      "label-label": "Label",
+      "label-placeholder": "e.g. Tempo traces",
+      "label-required": "This field is required.",
       "sub-text": "<0>Define text that will describe the correlation.</0>",
       "title": "Define correlation label (Step 1 of 3)"
+    },
+    "nav-form": {
+      "add-btn": "Add",
+      "back-btn": "Back",
+      "next-btn": "Next",
+      "save-btn": "Save"
+    },
+    "query-editor": {
+      "control-rules": "The selected target data source must export a query editor.",
+      "ds-text": "Please select a target data source first.",
+      "ds-title": "No data source selected",
+      "error-text": "The selected data source could not be loaded.",
+      "error-title": "Error loading data source",
+      "loading": "Loading query editor...",
+      "qe-title": "Data source does not export a query editor.",
+      "query-description": "Define the query that is run when the link is clicked. You can use <2>variables</2> to access specific field values.",
+      "query-label": "Query"
     },
     "source-form": {
       "control-required": "This field is required.",
@@ -147,7 +164,36 @@
       "source-description": "Results from selected source data source have links displayed in the panel",
       "source-label": "Source",
       "sub-text": "<0>Define what data source will display the correlation, and what data will replace previously defined variables.</0>",
-      "titel": ""
+      "title": "Configure the data source that will link to {{dataSourceName}} (Step 3 of 3)"
+    },
+    "target-form": {
+      "control-rules": "This field is required.",
+      "sub-text": "<0>Define what data source the correlation will link to, and what query will run when the correlation is clicked.</0>",
+      "target-description": "Specify which data source is queried when the link is clicked",
+      "target-label": "Target",
+      "title": "Setup the target for the correlation (Step 2 of 3)"
+    },
+    "transform": {
+      "add-btn": "Add transformation",
+      "expression-label": "Expression",
+      "expression-required": "Please define an expression",
+      "expression-tooltip": "Required for regular expression. The expression the transformation will use. Logfmt does not use further specifications.",
+      "field-input": "field",
+      "field-label": "  Field",
+      "field-tooltip": "  Optional. The field to transform. If not specified, the transformation will be applied to the results field.",
+      "heading": "Transformations",
+      "logfmt-description": "Parse provided field with logfmt to get variables",
+      "logfmt-label": "Logfmt",
+      "map-label": "Map value",
+      "map-tooltip": "Optional. Defines the name of the variable. This is currently only valid for regular expressions with a single, unnamed capture group.",
+      "no-tranform": "No transformations defined.",
+      "regex-description": "Field will be parsed with regex. Use named capture groups to return multiple variables, or a single unnamed capture group to add variable to named map value.",
+      "regex-label": "Regular expression",
+      "remove": "Remove",
+      "remove-tooltip": "Remove transformation",
+      "type-label": "     Type",
+      "type-rules": "Please select a transformation type",
+      "type-tooltip": "  The type of transformation that will be applied to the source data."
     }
   },
   "dashboard": {
