--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -127,15 +127,32 @@
     }
   },
   "correlations": {
-    "basic-info": {
-      "Description-description": "Øpŧįőŉäľ đęşčřįpŧįőŉ ŵįŧĥ mőřę įŉƒőřmäŧįőŉ äþőūŧ ŧĥę ľįŉĸ",
+    "basic-info-form": {
+      "description-description": "Øpŧįőŉäľ đęşčřįpŧįőŉ ŵįŧĥ mőřę įŉƒőřmäŧįőŉ äþőūŧ ŧĥę ľįŉĸ",
       "Description-label": "Đęşčřįpŧįőŉ",
-      "Label-description": "Ŧĥįş ŉämę ŵįľľ þę ūşęđ äş ŧĥę ľäþęľ ƒőř ŧĥę čőřřęľäŧįőŉ. Ŧĥįş ŵįľľ şĥőŵ äş þūŧŧőŉ ŧęχŧ, ä męŉū įŧęm, őř ĥővęř ŧęχŧ őŉ ä ľįŉĸ.",
-      "Label-label": "Ŀäþęľ",
-      "Label-placeholder": "ę.ģ. Ŧęmpő ŧřäčęş",
-      "Label-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "label-description": "Ŧĥįş ŉämę ŵįľľ þę ūşęđ äş ŧĥę ľäþęľ ƒőř ŧĥę čőřřęľäŧįőŉ. Ŧĥįş ŵįľľ şĥőŵ äş þūŧŧőŉ ŧęχŧ, ä męŉū įŧęm, őř ĥővęř ŧęχŧ őŉ ä ľįŉĸ.",
+      "label-label": "Ŀäþęľ",
+      "label-placeholder": "ę.ģ. Ŧęmpő ŧřäčęş",
+      "label-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
       "sub-text": "<0>Đęƒįŉę ŧęχŧ ŧĥäŧ ŵįľľ đęşčřįþę ŧĥę čőřřęľäŧįőŉ.</0>",
       "title": "Đęƒįŉę čőřřęľäŧįőŉ ľäþęľ (Ŝŧęp 1 őƒ 3)"
+    },
+    "nav-form": {
+      "add-btn": "Åđđ",
+      "back-btn": "ßäčĸ",
+      "next-btn": "Ńęχŧ",
+      "save-btn": "Ŝävę"
+    },
+    "query-editor": {
+      "control-rules": "Ŧĥę şęľęčŧęđ ŧäřģęŧ đäŧä şőūřčę mūşŧ ęχpőřŧ ä qūęřy ęđįŧőř.",
+      "ds-text": "Pľęäşę şęľęčŧ ä ŧäřģęŧ đäŧä şőūřčę ƒįřşŧ.",
+      "ds-title": "Ńő đäŧä şőūřčę şęľęčŧęđ",
+      "error-text": "Ŧĥę şęľęčŧęđ đäŧä şőūřčę čőūľđ ŉőŧ þę ľőäđęđ.",
+      "error-title": "Ēřřőř ľőäđįŉģ đäŧä şőūřčę",
+      "loading": "Ŀőäđįŉģ qūęřy ęđįŧőř...",
+      "qe-title": "Đäŧä şőūřčę đőęş ŉőŧ ęχpőřŧ ä qūęřy ęđįŧőř.",
+      "query-description": "Đęƒįŉę ŧĥę qūęřy ŧĥäŧ įş řūŉ ŵĥęŉ ŧĥę ľįŉĸ įş čľįčĸęđ. Ÿőū čäŉ ūşę <2>väřįäþľęş</2> ŧő äččęşş şpęčįƒįč ƒįęľđ väľūęş.",
+      "query-label": "Qūęřy"
     },
     "source-form": {
       "control-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
@@ -147,7 +164,36 @@
       "source-description": "Ŗęşūľŧş ƒřőm şęľęčŧęđ şőūřčę đäŧä şőūřčę ĥävę ľįŉĸş đįşpľäyęđ įŉ ŧĥę päŉęľ",
       "source-label": "Ŝőūřčę",
       "sub-text": "<0>Đęƒįŉę ŵĥäŧ đäŧä şőūřčę ŵįľľ đįşpľäy ŧĥę čőřřęľäŧįőŉ, äŉđ ŵĥäŧ đäŧä ŵįľľ řępľäčę přęvįőūşľy đęƒįŉęđ väřįäþľęş.</0>",
-      "titel": ""
+      "title": "Cőŉƒįģūřę ŧĥę đäŧä şőūřčę ŧĥäŧ ŵįľľ ľįŉĸ ŧő {{dataSourceName}} (Ŝŧęp 3 őƒ 3)"
+    },
+    "target-form": {
+      "control-rules": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "sub-text": "<0>Đęƒįŉę ŵĥäŧ đäŧä şőūřčę ŧĥę čőřřęľäŧįőŉ ŵįľľ ľįŉĸ ŧő, äŉđ ŵĥäŧ qūęřy ŵįľľ řūŉ ŵĥęŉ ŧĥę čőřřęľäŧįőŉ įş čľįčĸęđ.</0>",
+      "target-description": "Ŝpęčįƒy ŵĥįčĥ đäŧä şőūřčę įş qūęřįęđ ŵĥęŉ ŧĥę ľįŉĸ įş čľįčĸęđ",
+      "target-label": "Ŧäřģęŧ",
+      "title": "Ŝęŧūp ŧĥę ŧäřģęŧ ƒőř ŧĥę čőřřęľäŧįőŉ (Ŝŧęp 2 őƒ 3)"
+    },
+    "transform": {
+      "add-btn": "Åđđ ŧřäŉşƒőřmäŧįőŉ",
+      "expression-label": "Ēχpřęşşįőŉ",
+      "expression-required": "Pľęäşę đęƒįŉę äŉ ęχpřęşşįőŉ",
+      "expression-tooltip": "Ŗęqūįřęđ ƒőř řęģūľäř ęχpřęşşįőŉ. Ŧĥę ęχpřęşşįőŉ ŧĥę ŧřäŉşƒőřmäŧįőŉ ŵįľľ ūşę. Ŀőģƒmŧ đőęş ŉőŧ ūşę ƒūřŧĥęř şpęčįƒįčäŧįőŉş.",
+      "field-input": "ƒįęľđ",
+      "field-label": "  Fįęľđ",
+      "field-tooltip": "  Øpŧįőŉäľ. Ŧĥę ƒįęľđ ŧő ŧřäŉşƒőřm. Ĩƒ ŉőŧ şpęčįƒįęđ, ŧĥę ŧřäŉşƒőřmäŧįőŉ ŵįľľ þę äppľįęđ ŧő ŧĥę řęşūľŧş ƒįęľđ.",
+      "heading": "Ŧřäŉşƒőřmäŧįőŉş",
+      "logfmt-description": "Päřşę přővįđęđ ƒįęľđ ŵįŧĥ ľőģƒmŧ ŧő ģęŧ väřįäþľęş",
+      "logfmt-label": "Ŀőģƒmŧ",
+      "map-label": "Mäp väľūę",
+      "map-tooltip": "Øpŧįőŉäľ. Đęƒįŉęş ŧĥę ŉämę őƒ ŧĥę väřįäþľę. Ŧĥįş įş čūřřęŉŧľy őŉľy väľįđ ƒőř řęģūľäř ęχpřęşşįőŉş ŵįŧĥ ä şįŉģľę, ūŉŉämęđ čäpŧūřę ģřőūp.",
+      "no-tranform": "Ńő ŧřäŉşƒőřmäŧįőŉş đęƒįŉęđ.",
+      "regex-description": "Fįęľđ ŵįľľ þę päřşęđ ŵįŧĥ řęģęχ. Ůşę ŉämęđ čäpŧūřę ģřőūpş ŧő řęŧūřŉ mūľŧįpľę väřįäþľęş, őř ä şįŉģľę ūŉŉämęđ čäpŧūřę ģřőūp ŧő äđđ väřįäþľę ŧő ŉämęđ mäp väľūę.",
+      "regex-label": "Ŗęģūľäř ęχpřęşşįőŉ",
+      "remove": "Ŗęmővę",
+      "remove-tooltip": "Ŗęmővę ŧřäŉşƒőřmäŧįőŉ",
+      "type-label": "     Ŧypę",
+      "type-rules": "Pľęäşę şęľęčŧ ä ŧřäŉşƒőřmäŧįőŉ ŧypę",
+      "type-tooltip": "  Ŧĥę ŧypę őƒ ŧřäŉşƒőřmäŧįőŉ ŧĥäŧ ŵįľľ þę äppľįęđ ŧő ŧĥę şőūřčę đäŧä."
     }
   },
   "dashboard": {
