--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -880,6 +880,12 @@
       "empty-recent-list-info": "Il semble que vous n'ayez jamais utilisé ce sélecteur de temps dans le passé. Lorsque vous commencerez à utiliser des plages de temps, celles récemment utilisées apparaîtront ici.",
       "filter-placeholder": "Rechercher dans les plages rapides"
     },
+    "dashboard-settings": {
+      "json-editor-settings": {
+        "save-button": "Sauvegarder les modifications",
+        "subtitle": "Le modèle JSON ci-dessous est la structure de données qui définit le tableau de bord. Cela inclut les paramètres du tableau de bord, les paramètres du panneau, la mise en page, les requêtes, etc."
+      }
+    },
     "footer": {
       "change-settings-button": "Modifier les paramètres de l'heure",
       "fiscal-year-option": "Exercice fiscal",
