--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -314,9 +314,24 @@
     }
   },
   "library-panels": {
+    "modal": {
+      "button-cancel": "",
+      "button-view-panel1": "",
+      "button-view-panel2": "",
+      "contianer-dashboard": "",
+      "contianer-dashboards": "",
+      "contianer-prefix": "",
+      "contianer-suffix": "",
+      "panel-not-linked": "",
+      "title": ""
+    },
     "save": {
       "error": "Error al guardar el panel de la librería: «{{errorMsg}}»",
       "success": "Panel de librería guardado"
+    },
+    "select": {
+      "no-dashboard-message": "",
+      "placeholder": ""
     }
   },
   "login": {
