--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -327,6 +327,14 @@
       "unknown": ""
     }
   },
+  "manage-dashboards": {
+    "column-header": {
+      "name": "",
+      "url": ""
+    },
+    "external": "",
+    "view-button": ""
+  },
   "nav": {
     "add-new-connections": {
       "title": ""
