--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -749,6 +749,7 @@
       "time-range-description": "Transforms the current relative time range to an absolute time range"
     },
     "export": {
+      "back-button": "Back to export config",
       "cancel-button": "Cancel",
       "info-text": "Export this dashboard.",
       "save-button": "Save to file",
