--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -142,7 +142,7 @@
     },
     "page-content": "To enable Correlations, add it in the Grafana config:",
     "page-heading": "Correlations are disabled",
-    "sub-title": "Define how data living in different data sources relates to each other. Read more in the"
+    "sub-title": "Define how data living in different data sources relates to each other. Read more in the <2>documentation<1></1></2>"
   },
   "dashboard": {
     "add-menu": {
