--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -216,7 +216,7 @@
     }
   },
   "dashboard-settings": {
-    "json-editor-settings": {
+    "json-editor": {
       "save-button": "Save changes",
       "subtitle": "The JSON model below is the data structure that defines the dashboard. This includes dashboard settings, panel settings, layout, queries, and so on"
     }
