--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -216,12 +216,12 @@
     }
   },
   "dashboard-import-page": {
-    "field-label": "",
-    "field-placeholder": "",
-    "field-required": "",
-    "load-button": "",
-    "primary-text": "",
-    "secondary-text": ""
+    "field-label": "Fįŉđ äŉđ įmpőřŧ đäşĥþőäřđş ƒőř čőmmőŉ äppľįčäŧįőŉş äŧ <2>ģřäƒäŉä.čőm/đäşĥþőäřđş</2>",
+    "field-placeholder": "Ğřäƒäŉä.čőm đäşĥþőäřđ ŮŖĿ őř ĨĐ",
+    "field-required": "Å Ğřäƒäŉä đäşĥþőäřđ ŮŖĿ őř ĨĐ įş řęqūįřęđ",
+    "load-button": "Ŀőäđ",
+    "primary-text": "Ůpľőäđ đäşĥþőäřđ ĴŜØŃ ƒįľę",
+    "secondary-text": "Đřäģ äŉđ đřőp ĥęřę őř čľįčĸ ŧő þřőŵşę"
   },
   "dashboard-settings": {
     "json-editor": {
@@ -950,7 +950,7 @@
     "loading": "Ŀőäđįŉģ şęşşįőŉş..."
   },
   "utils": {
-    "invalid-dashboard-id": ""
+    "invalid-dashboard-id": "Cőūľđ ŉőŧ ƒįŉđ ä väľįđ Ğřäƒäŉä.čőm ĨĐ"
   },
   "variable": {
     "adhoc": {
