add extracted translations

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -216,9 +216,12 @@
     }
   },
   "dashboard-import-page": {
+    "cancel": "",
     "field-label": "",
     "field-placeholder": "",
     "field-required": "",
+    "json-field-label": "",
+    "json-field-required": "",
     "load-button": "",
     "primary-text": "",
     "secondary-text": ""
@@ -950,7 +953,10 @@
     "loading": "Sitzungen werden geladen …"
   },
   "utils": {
-    "invalid-dashboard-id": ""
+    "invalid-dashboard-id": "",
+    "invalid-json": "",
+    "tags-expected-array": "",
+    "tags-expected-strings": ""
   },
   "variable": {
     "adhoc": {
