--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -221,9 +221,12 @@
     }
   },
   "dashboard-import-page": {
+    "cancel": "",
     "field-label": "",
     "field-placeholder": "",
     "field-required": "",
+    "json-field-label": "",
+    "json-field-required": "",
     "load-button": "",
     "primary-text": "",
     "secondary-text": ""
@@ -955,7 +958,10 @@
     "loading": "Cargando sesiones..."
   },
   "utils": {
-    "invalid-dashboard-id": ""
+    "invalid-dashboard-id": "",
+    "invalid-json": "",
+    "tags-expected-array": "",
+    "tags-expected-strings": ""
   },
   "variable": {
     "adhoc": {
