--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -216,9 +216,12 @@
     }
   },
   "dashboard-import-page": {
+    "cancel": "",
     "field-label": "Fįŉđ äŉđ įmpőřŧ đäşĥþőäřđş ƒőř čőmmőŉ äppľįčäŧįőŉş äŧ <2>ģřäƒäŉä.čőm/đäşĥþőäřđş</2>",
     "field-placeholder": "Ğřäƒäŉä.čőm đäşĥþőäřđ ŮŖĿ őř ĨĐ",
     "field-required": "Å Ğřäƒäŉä đäşĥþőäřđ ŮŖĿ őř ĨĐ įş řęqūįřęđ",
+    "json-field-label": "",
+    "json-field-required": "",
     "load-button": "Ŀőäđ",
     "primary-text": "Ůpľőäđ đäşĥþőäřđ ĴŜØŃ ƒįľę",
     "secondary-text": "Đřäģ äŉđ đřőp ĥęřę őř čľįčĸ ŧő þřőŵşę"
@@ -950,7 +953,10 @@
     "loading": "Ŀőäđįŉģ şęşşįőŉş..."
   },
   "utils": {
-    "invalid-dashboard-id": "Cőūľđ ŉőŧ ƒįŉđ ä väľįđ Ğřäƒäŉä.čőm ĨĐ"
+    "invalid-dashboard-id": "Cőūľđ ŉőŧ ƒįŉđ ä väľįđ Ğřäƒäŉä.čőm ĨĐ",
+    "invalid-json": "",
+    "tags-expected-array": "",
+    "tags-expected-strings": ""
   },
   "variable": {
     "adhoc": {
