--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -322,14 +322,6 @@
       "unknown": "Unknown error occurred"
     }
   },
-  "manage-dashboards": {
-    "column-header": {
-      "name": "<0>Name</0>",
-      "url": "<0>Snapshot url</0>"
-    },
-    "external": "External",
-    "view-button": "<0>View</0>"
-  },
   "nav": {
     "add-new-connections": {
       "title": "Add new connection"
@@ -857,6 +849,12 @@
       "default-label": "Default"
     },
     "title": "Preferences"
+  },
+  "snapshot": {
+    "external-badge": "External",
+    "name-column-header": "Name",
+    "url-column-header": "Snapshot url",
+    "view-button": "View"
   },
   "tag-filter": {
     "loading": "Loading...",
