--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -317,14 +317,6 @@
       "unknown": ""
     }
   },
-  "manage-dashboards": {
-    "column-header": {
-      "name": "",
-      "url": ""
-    },
-    "external": "",
-    "view-button": ""
-  },
   "nav": {
     "add-new-connections": {
       "title": ""
@@ -852,6 +844,12 @@
       "default-label": "默认"
     },
     "title": "首选项"
+  },
+  "snapshot": {
+    "external-badge": "",
+    "name-column-header": "",
+    "url-column-header": "",
+    "view-button": ""
   },
   "tag-filter": {
     "loading": "加载中...",
