--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -213,18 +213,34 @@
       "settings": "Dashboard settings",
       "share": "Share dashboard",
       "unmark-favorite": "Unmark as favorite"
+    },
+    "validation": {
+      "invalid-dashboard-id": "Could not find a valid Grafana.com ID",
+      "invalid-json": "Not valid JSON",
+      "tags-expected-array": "tags expected array",
+      "tags-expected-strings": "tags expected array of strings"
+    }
+  },
+  "dashboard-import": {
+    "file-dropzone": {
+      "primary-text": "Upload dashboard JSON file",
+      "secondary-text": "Drag and drop here or click to browse"
+    },
+    "form-actions": {
+      "load": "Load"
+    },
+    "gcom-field": {
+      "label": "Find and import dashboards for common applications at <1></1>",
+      "placeholder": "Grafana.com dashboard URL or ID"
+    },
+    "json-field": {
+      "label": "Import via dashboard JSON model",
+      "validation-required": "Need a dashboard JSON model"
     }
   },
   "dashboard-import-page": {
     "cancel": "Cancel",
-    "field-label": "Find and import dashboards for common applications at <2>grafana.com/dashboards</2>",
-    "field-placeholder": "Grafana.com dashboard URL or ID",
-    "field-required": "A Grafana dashboard URL or ID is required",
-    "json-field-label": "Import via dashboard JSON model",
-    "json-field-required": "Need a dashboard JSON model",
-    "load-button": "Load",
-    "primary-text": "Upload dashboard JSON file",
-    "secondary-text": "Drag and drop here or click to browse"
+    "field-required": "A Grafana dashboard URL or ID is required"
   },
   "dashboard-settings": {
     "json-editor": {
@@ -951,12 +967,6 @@
   },
   "user-sessions": {
     "loading": "Loading sessions..."
-  },
-  "utils": {
-    "invalid-dashboard-id": "Could not find a valid Grafana.com ID",
-    "invalid-json": "Not valid JSON",
-    "tags-expected-array": "tags expected array",
-    "tags-expected-strings": "tags expected array of strings"
   },
   "variable": {
     "adhoc": {
