--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -218,18 +218,34 @@
       "settings": "Ajustes del panel de control",
       "share": "Compartir panel o panel de control",
       "unmark-favorite": "Deshacer marca como favorito"
+    },
+    "validation": {
+      "invalid-dashboard-id": "",
+      "invalid-json": "",
+      "tags-expected-array": "",
+      "tags-expected-strings": ""
+    }
+  },
+  "dashboard-import": {
+    "file-dropzone": {
+      "primary-text": "",
+      "secondary-text": ""
+    },
+    "form-actions": {
+      "load": ""
+    },
+    "gcom-field": {
+      "label": "",
+      "placeholder": ""
+    },
+    "json-field": {
+      "label": "",
+      "validation-required": ""
     }
   },
   "dashboard-import-page": {
     "cancel": "",
-    "field-label": "",
-    "field-placeholder": "",
-    "field-required": "",
-    "json-field-label": "",
-    "json-field-required": "",
-    "load-button": "",
-    "primary-text": "",
-    "secondary-text": ""
+    "field-required": ""
   },
   "dashboard-settings": {
     "json-editor": {
@@ -956,12 +972,6 @@
   },
   "user-sessions": {
     "loading": "Cargando sesiones..."
-  },
-  "utils": {
-    "invalid-dashboard-id": "",
-    "invalid-json": "",
-    "tags-expected-array": "",
-    "tags-expected-strings": ""
   },
   "variable": {
     "adhoc": {
