--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -208,18 +208,34 @@
       "settings": "仪表板设置",
       "share": "分享仪表板或面板",
       "unmark-favorite": "取消标记为收藏"
+    },
+    "validation": {
+      "invalid-dashboard-id": "",
+      "invalid-json": "",
+      "tags-expected-array": "",
+      "tags-expected-strings": ""
+    }
+  },
+  "dashboard-import": {
+    "file-dropzone": {
+      "primary-text": "",
+      "secondary-text": ""
+    },
+    "form-actions": {
+      "load": ""
+    },
+    "gcom-field": {
+      "label": "",
+      "placeholder": ""
+    },
+    "json-field": {
+      "label": "",
+      "validation-required": ""
     }
   },
   "dashboard-import-page": {
     "cancel": "",
-    "field-label": "",
-    "field-placeholder": "",
-    "field-required": "",
-    "json-field-label": "",
-    "json-field-required": "",
-    "load-button": "",
-    "primary-text": "",
-    "secondary-text": ""
+    "field-required": ""
   },
   "dashboard-settings": {
     "json-editor": {
@@ -946,12 +962,6 @@
   },
   "user-sessions": {
     "loading": "正在加载会话..."
-  },
-  "utils": {
-    "invalid-dashboard-id": "",
-    "invalid-json": "",
-    "tags-expected-array": "",
-    "tags-expected-strings": ""
   },
   "variable": {
     "adhoc": {
