final changes after review

--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -305,23 +305,18 @@
   },
   "library-panels": {
     "modal": {
+      "body__other": "",
       "button-cancel": "",
       "button-view-panel1": "",
       "button-view-panel2": "",
-      "contianer-dashboard": "",
-      "contianer-dashboards": "",
-      "contianer-prefix": "",
-      "contianer-suffix": "",
       "panel-not-linked": "",
+      "select-no-options-message": "",
+      "select-placeholder": "",
       "title": ""
     },
     "save": {
       "error": "保存库面板时出错：\"{{errorMsg}}\"",
       "success": "库面板已保存"
-    },
-    "select": {
-      "no-dashboard-message": "",
-      "placeholder": ""
     }
   },
   "login": {
