--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -310,23 +310,19 @@
   },
   "library-panels": {
     "modal": {
+      "body__one": "",
+      "body__other": "",
       "button-cancel": "",
       "button-view-panel1": "",
       "button-view-panel2": "",
-      "contianer-dashboard": "",
-      "contianer-dashboards": "",
-      "contianer-prefix": "",
-      "contianer-suffix": "",
       "panel-not-linked": "",
+      "select-no-options-message": "",
+      "select-placeholder": "",
       "title": ""
     },
     "save": {
       "error": "Fehler beim Speichern des Bibliotheks-Panels: „{{errorMsg}}“",
       "success": "Bibliotheks-Panel wurde gespeichert"
-    },
-    "select": {
-      "no-dashboard-message": "",
-      "placeholder": ""
     }
   },
   "login": {
