--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -310,23 +310,19 @@
   },
   "library-panels": {
     "modal": {
+      "body__one": "This panel is being used in {{count}} dashboard. Please choose which dashboard to view the panel in:",
+      "body__other": "This panel is being used in {{count}} dashboards. Please choose which dashboard to view the panel in:",
       "button-cancel": "<0>Cancel</0>",
       "button-view-panel1": "View panel in {{label}}...",
       "button-view-panel2": "View panel in dashboard...",
-      "contianer-dashboard": "dashboard",
-      "contianer-dashboards": "dashboards",
-      "contianer-prefix": "This panel is being used in  ",
-      "contianer-suffix": ". Please choose which dashboard to view the panel in:",
       "panel-not-linked": "Panel is not linked to a dashboard. Add the panel to a dashboard and retry.",
+      "select-no-options-message": "No dashboards found",
+      "select-placeholder": "Start typing to search for dashboard",
       "title": "View panel in dashboard"
     },
     "save": {
       "error": "Error saving library panel: \"{{errorMsg}}\"",
       "success": "Library panel saved"
-    },
-    "select": {
-      "no-dashboard-message": "No dashboards found",
-      "placeholder": "Start typing to search for dashboard"
     }
   },
   "login": {
