--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -315,23 +315,20 @@
   },
   "library-panels": {
     "modal": {
+      "body__one": "",
+      "body__many": "",
+      "body__other": "",
       "button-cancel": "",
       "button-view-panel1": "",
       "button-view-panel2": "",
-      "contianer-dashboard": "",
-      "contianer-dashboards": "",
-      "contianer-prefix": "",
-      "contianer-suffix": "",
       "panel-not-linked": "",
+      "select-no-options-message": "",
+      "select-placeholder": "",
       "title": ""
     },
     "save": {
       "error": "Error al guardar el panel de la librería: «{{errorMsg}}»",
       "success": "Panel de librería guardado"
-    },
-    "select": {
-      "no-dashboard-message": "",
-      "placeholder": ""
     }
   },
   "login": {
