update keys for i18n

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -239,6 +239,7 @@
       "tags-expected-strings": ""
     }
   },
+  "dashboard-delete-button": "",
   "dashboard-import": {
     "file-dropzone": {
       "primary-text": "",
@@ -260,6 +261,10 @@
     }
   },
   "dashboard-settings": {
+    "general-settings": {
+      "description": "",
+      "title": ""
+    },
     "json-editor": {
       "save-button": "",
       "subtitle": ""
