--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -239,6 +239,7 @@
       "tags-expected-strings": "ŧäģş ęχpęčŧęđ äřřäy őƒ şŧřįŉģş"
     }
   },
+  "dashboard-delete-button": "Đęľęŧę Đäşĥþőäřđ",
   "dashboard-import": {
     "file-dropzone": {
       "primary-text": "Ůpľőäđ đäşĥþőäřđ ĴŜØŃ ƒįľę",
@@ -260,6 +261,10 @@
     }
   },
   "dashboard-settings": {
+    "general-settings": {
+      "description": "<0>Đęşčřįpŧįőŉ</0>{čőŉƒįģ.ƒęäŧūřęŦőģģľęş.đäşĥģpŧ && (\n                    <ĞęŉÅĨĐäşĥĐęşčřįpŧįőŉßūŧŧőŉ őŉĞęŉęřäŧę={őŉĐęşčřįpŧįőŉCĥäŉģę} đäşĥþőäřđ={đäşĥþőäřđ} />\n                  )}",
+      "title": "<0>Ŧįŧľę</0>{čőŉƒįģ.ƒęäŧūřęŦőģģľęş.đäşĥģpŧ && (\n                    <ĞęŉÅĨĐäşĥŦįŧľęßūŧŧőŉ őŉĞęŉęřäŧę={őŉŦįŧľęCĥäŉģę} đäşĥþőäřđ={đäşĥþőäřđ} />\n                  )}"
+    },
     "json-editor": {
       "save-button": "Ŝävę čĥäŉģęş",
       "subtitle": "Ŧĥę ĴŜØŃ mőđęľ þęľőŵ įş ŧĥę đäŧä şŧřūčŧūřę ŧĥäŧ đęƒįŉęş ŧĥę đäşĥþőäřđ. Ŧĥįş įŉčľūđęş đäşĥþőäřđ şęŧŧįŉģş, päŉęľ şęŧŧįŉģş, ľäyőūŧ, qūęřįęş, äŉđ şő őŉ."
