--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -244,6 +244,7 @@
       "tags-expected-strings": ""
     }
   },
+  "dashboard-delete-button": "",
   "dashboard-import": {
     "file-dropzone": {
       "primary-text": "",
@@ -265,6 +266,10 @@
     }
   },
   "dashboard-settings": {
+    "general-settings": {
+      "description": "",
+      "title": ""
+    },
     "json-editor": {
       "save-button": "",
       "subtitle": ""
